--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 backoffice/application/logs/log-2022-03-05.php
 application/logs/log-2022-03-05.log
 application/logs/log-2022-03-06.log
+backoffice/application/logs/log-2022-03-13.php
+*.log
+assets/img/.DS_Store
+assets/.DS_Store
+backoffice/.DS_Store
