fix de pedidos fijos que no actualizaba el total con la suma de los extras

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 backoffice/application/logs/log-2022-03-05.php
 application/logs/log-2022-03-05.log
 application/logs/log-2022-03-06.log
+backoffice/assets/.DS_Store
