Multiples dias primera parte

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ backoffice/application/logs/log-2022-03-13.php
 assets/img/.DS_Store
 assets/.DS_Store
 backoffice/.DS_Store
+backoffice/application/logs/log-2022-03-24.php
+backoffice/application/logs/log-2022-03-26.php
+backoffice/application/logs/log-2022-03-27.php
+backoffice/application/logs/log-2022-03-31.php
+backoffice/application/logs/log-2022-03-24.php
+backoffice/ClientesOrdenes.xls
+backoffice/NewsletterSuscripciones.xls
+backoffice/ResumenPedidos.xls
