--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ backoffice/application/logs/log-2022-03-05.php
 application/logs/log-2022-03-05.log
 application/logs/log-2022-03-06.log
 backoffice/assets/.DS_Store
+*.pdf
+*.pdf
+backoffice/CamionesLogistica.pdf
+backoffice/ComandasPedidos.pdf
+backoffice/LogisticaCamiones.pdf
+backoffice/CamionesLogistica.pdf
