arreglado issue que la foto del dia cargado con bolson no salia en el front

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ backoffice/CamionesLogistica.pdf
 backoffice/ComandasPedidos.pdf
 backoffice/LogisticaCamiones.pdf
 backoffice/CamionesLogistica.pdf
+assets/img/dias-entrega-imagenes/imagen_dia_119.png
+assets/img/dias-entrega-imagenes/imagen_dia_120.png
+assets/img/dias-entrega-imagenes/imagen_dia_121.png
+assets/img/dias-entrega-imagenes/imagen_dia_122.jpeg
+assets/img/dias-entrega-imagenes/imagen_dia_122.png
+assets/img/dias-entrega-imagenes/imagen_dia_123.jpeg
