--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ assets/img/dias-entrega-imagenes/imagen_dia_121.png
 assets/img/dias-entrega-imagenes/imagen_dia_122.jpeg
 assets/img/dias-entrega-imagenes/imagen_dia_122.png
 assets/img/dias-entrega-imagenes/imagen_dia_123.jpeg
+assets/img/dias-entrega-imagenes/imagen_dia_108.jpeg
+assets/img/dias-entrega-imagenes/imagen_dia_109.jpeg
+assets/img/dias-entrega-imagenes/imagen_dia_124.png
+assets/img/dias-entrega-imagenes/imagen_dia_108.jpeg
+assets/img/dias-entrega-imagenes/imagen_dia_109.jpeg
+assets/img/dias-entrega-imagenes/imagen_dia_108.jpeg
