filtro home. Ahora se puede mezclar entre fechas y dia de entrega

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ assets/img/dias-entrega-imagenes/imagen_dia_124.png
 assets/img/dias-entrega-imagenes/imagen_dia_108.jpeg
 assets/img/dias-entrega-imagenes/imagen_dia_109.jpeg
 assets/img/dias-entrega-imagenes/imagen_dia_108.jpeg
+backoffice/application/logs/log-2022-03-19.php
+backoffice/application/logs/log-2022-03-20.php
+backoffice/application/logs/log-2022-03-22.php
+backoffice/application/logs/log-2022-03-24.php
+backoffice/application/logs/log-2022-05-04.php
+backoffice/application/logs/log-2022-05-14.php
